Update issue templates

--- a/.github/ISSUE_TEMPLATE/커스텀-이슈-템플릿-테스트.md
+++ b/.github/ISSUE_TEMPLATE/커스텀-이슈-템플릿-테스트.md
@@ -1,6 +1,6 @@
 ---
-name: 커스텀 이슈 템플릿
-about: 새로운 기능을 제안할 때 사용하세요.
+name: 커스텀 이슈 템플릿 테스트
+about: 새로운 기능을 제안할 때 사용하세요
 title: ''
 labels: ''
 assignees: ''
@@ -11,9 +11,8 @@ assignees: ''
 어떤 기능을 추가하고 싶은지 간단히 설명해주세요.
 
 ## 📌 작업 내용
-- [ ] UI 디자인 수정
-- [ ] API 연동
-- [ ] 테스트 코드 작성
+- [ ] 해야 할 작업 1
+- [ ] 해야 할 작업 2
 
 ## 💡 추가 정보
 관련 참고 자료나 추가 설명이 있다면 여기에 적어주세요.
